--- a/src/index.html
+++ b/src/index.html
@@ -136,6 +136,7 @@
   <div class="tilleg">
     <h2 class="tilleg_title">Lyse tilleg til ferien</h2>
     <ul class="tilleg_list">
+      <!-- -1 -->
       <li class="tilleg_list_frame tf">
         <div class="tilleg_item-bg">
           <p>Barnefest fotograf</p>
@@ -150,48 +151,121 @@
           </div><img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
         </div>
       </li>
+      <!-- -2 -->
       <li class="tilleg_list_frame ts">
         <div class="tilleg_item-bg tilleg_item-bg_2">
           <p>Såpeboble</p>
         </div>
-        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+        <!-- -Всплывающий блок -->
+        <div class="tilleg-help-block">
+          <div class="tilleg_item-description">
+            <p>Ein såpeboblegenerator er ein innretning som blir brukt til å lage såpebobler. Dei blir ofte brukt til
+              leik og underhaldning.</p>
+            <p class="tilleg_item-description_price">400 kr
+            </p>
+          </div><img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+        </div>
       </li>
+      <!-- -3 -->
       <li class="tilleg_list_frame tt">
         <div class="tilleg_item-bg tilleg_item-bg_3">
           <p>Glittertatoveringen</p>
         </div>
-        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+        <!-- -Всплывающий блок -->
+        <div class="tilleg-help-block">
+          <div class="tilleg_item-description">
+            <p>Glittertatoveringar er midlertidige tatoveringar som vanlegvis blir påførde huda ved hjelp av ein
+              spesiell lim og eit
+              lag med glitrande glitter. Desse tatoveringane kan koma i ulike design og mønster, og dei blir ofte brukt
+              til å dekorere
+              huda på ein festleg måte.</p>
+            <p class="tilleg_item-description_price">Fest: 1000 kr pr 1 time
+            </p>
+            <p class="tilleg_item-description_price_second">Bursdag: 500 kr pr 1 time (20 barna)
+            </p>
+          </div><img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+        </div>
       </li>
+      <!-- -4 -->
       <li class="tilleg_list_frame tfr">
         <div class="tilleg_item-bg tilleg_item-bg_4">
           <p>Ansiktsmaling</p>
         </div>
-        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+        <!-- -Всплывающий блок -->
+        <div class="tilleg-help-block">
+          <div class="tilleg_item-description">
+            <p>Akvamaling blir nytta til å skape midlertidige teikningar og dekorasjonar på huda, særleg populært for å
+              teikne på
+              ansiktet. Ansiktmåling er vanlegvis trygt for huda, lett å påføre og vaskast bort med vatn. Det vert ofte
+              brukt på ulike
+              arrangement som barnebursdagar, festivalar og underhaldningsarrangement.</p>
+            <p class="tilleg_item-description_price">Fest: 1000 kr pr 1 time / 50-100 kr pr ein person
+            </p>
+            <p class="tilleg_item-description_price_second">Bursdag: 500 kr pr 1 time (ca. 8 barn)
+            </p>
+          </div><img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+        </div>
       </li>
+      <!-- -5 -->
       <li class="tilleg_list_frame tfv">
         <div class="tilleg_item-bg tilleg_item-bg_5">
           <p>Klistremerker for barn</p>
         </div>
         <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
       </li>
+      <!-- -6 -->
       <li class="tilleg_list_frame tsx">
         <div class="tilleg_item-bg tilleg_item-bg_6">
           <p>Tegning med maling for minne</p>
         </div>
-        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+        <!-- -Всплывающий блок -->
+        <div class="tilleg-help-block">
+          <div class="tilleg_item-description">
+            <p>Denne typen tegninger har som mål å fange stemningen og gleden rundt bursdagsfeiringen og kan vere ein
+              personlig og
+              meningsfull gave til den som feirer sin spesielle dag frå gruppen barna.</p>
+            <p class="tilleg_item-description_price">frå 250 kr
+            </p>
+          </div><img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+        </div>
       </li>
+      <!-- -7 -->
       <li class="tilleg_list_frame tsn">
         <div class="tilleg_item-bg tilleg_item-bg_7">
           <p>Barnefrisør</p>
         </div>
         <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
       </li>
+      <!-- -8 -->
       <li class="tilleg_list_frame te">
         <div class="tilleg_item-bg tilleg_item-bg_8">
           <p>Tilbehør</p>
         </div>
         <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
       </li>
+      <!-- -9 -->
+      <li class="tilleg_list_frame tpin">
+        <div class="tilleg_item-bg tilleg_item-bg_9">
+          <p>Pinjata</p>
+        </div>
+        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+      </li>
+      <!-- -10 -->
+      <li class="tilleg_list_frame tfot">
+        <div class="tilleg_item-bg tilleg_item-bg_10">
+          <p>Fotosone</p>
+        </div>
+        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+      </li>
+      <!-- -11 -->
+      <li class="tilleg_list_frame tbal">
+        <div class="tilleg_item-bg tilleg_item-bg_11">
+          <p>Baloongar</p>
+        </div>
+        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+      </li>
+
+
     </ul>
 
   </div>
