--- a/src/index.html
+++ b/src/index.html
@@ -144,7 +144,8 @@
         <!-- -Всплывающий блок -->
         <div class="tilleg-help-block">
           <div class="tilleg_item-description">
-            <p>Vår fotograf kan fange viktige øyeblikk og følelsar hjå barn og deira foreldre, og lage kvalitetsrike og
+            <p class="tilleg_item-description_text">Vår fotograf kan fange viktige øyeblikk og følelsar hjå barn og
+              deira foreldre, og lage kvalitetsrike og
               minneverdige fotografi.</p>
             <p class="tilleg_item-description_price">500 kr pr 1 time
             </p>
@@ -159,7 +160,8 @@
         <!-- -Всплывающий блок -->
         <div class="tilleg-help-block">
           <div class="tilleg_item-description">
-            <p>Ein såpeboblegenerator er ein innretning som blir brukt til å lage såpebobler. Dei blir ofte brukt til
+            <p class="tilleg_item-description_text">Ein såpeboblegenerator er ein innretning som blir brukt til å lage
+              såpebobler. Dei blir ofte brukt til
               leik og underhaldning.</p>
             <p class="tilleg_item-description_price">400 kr
             </p>
@@ -174,11 +176,10 @@
         <!-- -Всплывающий блок -->
         <div class="tilleg-help-block">
           <div class="tilleg_item-description">
-            <p>Glittertatoveringar er midlertidige tatoveringar som vanlegvis blir påførde huda ved hjelp av ein
-              spesiell lim og eit
-              lag med glitrande glitter. Desse tatoveringane kan koma i ulike design og mønster, og dei blir ofte brukt
-              til å dekorere
-              huda på ein festleg måte.</p>
+            <p class="tilleg_item-description_text">Glittertatoveringar er midlertidige tatoveringar som påførast huda
+              med lim og glitter. Dei kjem i ulike
+              design og
+              mønster, og er ofte brukte til festleg huddekorasjon.</p>
             <p class="tilleg_item-description_price">Fest: 1000 kr pr 1 time
             </p>
             <p class="tilleg_item-description_price_second">Bursdag: 500 kr pr 1 time (20 barna)
@@ -194,11 +195,10 @@
         <!-- -Всплывающий блок -->
         <div class="tilleg-help-block">
           <div class="tilleg_item-description">
-            <p>Akvamaling blir nytta til å skape midlertidige teikningar og dekorasjonar på huda, særleg populært for å
-              teikne på
-              ansiktet. Ansiktmåling er vanlegvis trygt for huda, lett å påføre og vaskast bort med vatn. Det vert ofte
-              brukt på ulike
-              arrangement som barnebursdagar, festivalar og underhaldningsarrangement.</p>
+            <p class="tilleg_item-description_text">Akvamaling skaper midlertidige teikningar og dekorasjonar på huda,
+              spesielt ansiktet. Det er trygt, lett
+              å påføre, og
+              vaskast bort med vatn.</p>
             <p class="tilleg_item-description_price">Fest: 1000 kr pr 1 time / 50-100 kr pr ein person
             </p>
             <p class="tilleg_item-description_price_second">Bursdag: 500 kr pr 1 time (ca. 8 barn)
@@ -221,7 +221,8 @@
         <!-- -Всплывающий блок -->
         <div class="tilleg-help-block">
           <div class="tilleg_item-description">
-            <p>Denne typen tegninger har som mål å fange stemningen og gleden rundt bursdagsfeiringen og kan vere ein
+            <p class="tilleg_item-description_text">Denne typen tegninger har som mål å fange stemningen og gleden rundt
+              bursdagsfeiringen og kan vere ein
               personlig og
               meningsfull gave til den som feirer sin spesielle dag frå gruppen barna.</p>
             <p class="tilleg_item-description_price">frå 250 kr
