--- a/src/index.html
+++ b/src/index.html
@@ -137,19 +137,20 @@
     <h2 class="tilleg_title">Lyse tilleg til ferien</h2>
     <ul class="tilleg_list">
       <!-- -1 -->
-      <li class="tilleg_list_frame tf">
+      <li class="tilleg_list_frame tf" id="block">
         <div class="tilleg_item-bg">
           <p>Barnefest fotograf</p>
         </div>
         <!-- -Всплывающий блок -->
-        <div class="tilleg-help-block">
+        <div class="tilleg-help-block overlay">
           <div class="tilleg_item-description">
             <p class="tilleg_item-description_text">Vår fotograf kan fange viktige øyeblikk og følelsar hjå barn og
               deira foreldre, og lage kvalitetsrike og
               minneverdige fotografi.</p>
             <p class="tilleg_item-description_price">500 kr pr 1 time
             </p>
-          </div><img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+          </div>
+          <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
         </div>
       </li>
       <!-- -2 -->
@@ -158,7 +159,7 @@
           <p>Såpeboble</p>
         </div>
         <!-- -Всплывающий блок -->
-        <div class="tilleg-help-block">
+        <div class="tilleg-help-block overlay">
           <div class="tilleg_item-description">
             <p class="tilleg_item-description_text">Ein såpeboblegenerator er ein innretning som blir brukt til å lage
               såpebobler. Dei blir ofte brukt til
@@ -174,7 +175,7 @@
           <p>Glittertatoveringen</p>
         </div>
         <!-- -Всплывающий блок -->
-        <div class="tilleg-help-block">
+        <div class="tilleg-help-block overlay">
           <div class="tilleg_item-description">
             <p class="tilleg_item-description_text">Glittertatoveringar er midlertidige tatoveringar som påførast huda
               med lim og glitter. Dei kjem i ulike
@@ -285,6 +286,7 @@
   <!-- --PRICES -->
   <div class="prices">
     <h2 class="prices_title">Tjenestepakker</h2>
+    <p class="prices_description">Gjelder kun for bursdager</p>
     <ul class="prices_pack">
 
       <!-- Express -->
@@ -525,6 +527,19 @@
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
   <script src="./js/script.js"></script>
+
+
+
+  <!-- --FEEDBACK -->
+  <div class="feedback">
+    <h2 class="feedback_title">Tilbakemeldinger</h2>
+    <img class="feedback_img" src="./i/img/feedback.jpg" alt="">
+    <img class="feedback_img" src="./i/img/feedback.jpg" alt="">
+    <img class="feedback_img" src="./i/img/feedback.jpg" alt="">
+    <img class="feedback_img" src="./i/img/feedback.jpg" alt="">
+    <img class="feedback_img" src="./i/img/feedback.jpg" alt="">
+    <p class="feedback_text">Vi er glade for å bringe glede til barna dykkar!</p>
+  </div>
 
   <!-- 
   <header class="header-container" id="header-container">
