--- a/src/index.html
+++ b/src/index.html
@@ -538,7 +538,9 @@
     <img class="feedback_img" src="./i/img/feedback.jpg" alt="">
     <img class="feedback_img" src="./i/img/feedback.jpg" alt="">
     <img class="feedback_img" src="./i/img/feedback.jpg" alt="">
-    <p class="feedback_text">Vi er glade for å bringe glede til barna dykkar!</p>
+    <div class="feedback_shape">
+      <p class="feedback_text">Vi er glade for å bringe glede til barna dykkar!</p>
+    </div>
   </div>
 
   <!-- 
