--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-
+  <a id="top"></a>
   <!-- --HEADER -->
   <header>
     <div class="header" id="header">
@@ -135,6 +135,7 @@
   <!-- --TILLEG -->
   <div class="tilleg">
     <h2 class="tilleg_title">Lyse tilleg til ferien</h2>
+    <p class="tilleg_texthelp">(Hold musepekeren over en tjeneste eller klikk for å finne ut mer)</p>
     <ul class="tilleg_list">
       <!-- -1 -->
       <li class="tilleg_list_frame tf" id="block">
