--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,16 @@
         <a href="" class="header_menu"><img class="header_menu_img" src="./i/img/menu.png" alt="menu"></a>
         <div class="header_text-logo">Arrangement for barna i Møre og Romsdal</div>
       </div>
+      <div class="header_tabs">
+        <ul class="header_tabs_list">
+          <li class="header_tabs_list_item"><a class="tabs-link" id="tab-helter" href="#helter">Helter</a></li>
+          <li class="header_tabs_list_item"><a class="tabs-link" id="tab-tjenester" href="">Tjenester</a></li>
+          <li class="header_tabs_list_item"><a class="tabs-link" id="tab-tjenestepakker" href="">Tjenestepakker for
+              bursdag</a></li>
+          <li class="header_tabs_list_item"><a class="tabs-link" id="tab-ordre" href="">Ordre</a></li>
+          <li class="header_tabs_list_item"><a class="tabs-link" id="tab-galleri" href="">Galleri</a></li>
+        </ul>
+      </div>
       <div class="header_right-part">
         <div class="header_contacts">
           <div class="header_contacts_text">Vi jobbar utan helgar og ferie!</div>
@@ -76,7 +86,7 @@
   </div>
 
   <!-- --HEROES -->
-  <div class="heroes">
+  <div class="heroes" id="helter">
     <div class="heroes_title">
       <h2 class="heroes_title_name">Organisering av barneselskap, bursdager og andre morsomme arrangement. <br>Eventbrå
         med
@@ -133,7 +143,7 @@
   </div>
 
   <!-- --TILLEG -->
-  <div class="tilleg">
+  <div class="tilleg" id="tjenester">
     <h2 class="tilleg_title">Lyse tilleg til ferien</h2>
     <p class="tilleg_texthelp">(Hold musepekeren over en tjeneste eller klikk for å finne ut mer)</p>
     <ul class="tilleg_list">
@@ -285,7 +295,7 @@
 
 
   <!-- --PRICES -->
-  <div class="prices">
+  <div class="prices" id="tjenestepakker">
     <h2 class="prices_title">Tjenestepakker</h2>
     <p class="prices_description">Gjelder kun for bursdager</p>
     <ul class="prices_pack">
@@ -462,7 +472,7 @@
   </div>
 
   <!-- --FORM -->
-  <div class="form">
+  <div class="form" id="ordre">
     <img class="form_img-1500" src="i/img/form-phone.png" alt="tlf">
     <h2 class="form_title">Bestill ferien akkurat nå - kontakt oss på nummer:</h2>
     <div class="form_for-1200">
@@ -484,7 +494,7 @@
   <!-- --GALLERY -->
 
 
-  <section class="gallery">
+  <section class="gallery" id="galleri">
 
     <h2 class="gallery__title">Se hvor brennende det er
       ferien vår går over</h2>
