--- a/src/index.html
+++ b/src/index.html
@@ -15,44 +15,67 @@
 
   <a id="top"></a>
   <!-- --HEADER -->
-  <header>
-    <div class="header" id="header">
-      <div class="header_menu-block"><a href="#" class="header_logo"><img class="header_logo_img"
-            src="./i/img/logo-removebg.png" alt="logo"></a>
-        <a href="" class="header_menu"><img class="header_menu_img" src="./i/img/menu.png" alt="menu"></a>
-        <div class="header_text-logo">Arrangement for barna i Møre og Romsdal</div>
-      </div>
-      <div class="header_tabs">
-        <ul class="header_tabs_list">
-          <li class="header_tabs_list_item"><a class="tabs-link" id="tab-helter" href="#helter">Helter</a></li>
-          <li class="header_tabs_list_item"><a class="tabs-link" id="tab-tjenester" href="">Tjenester</a></li>
-          <li class="header_tabs_list_item"><a class="tabs-link" id="tab-tjenestepakker" href="">Tjenestepakker for
-              bursdag</a></li>
-          <li class="header_tabs_list_item"><a class="tabs-link" id="tab-ordre" href="">Ordre</a></li>
-          <li class="header_tabs_list_item"><a class="tabs-link" id="tab-galleri" href="">Galleri</a></li>
-        </ul>
-      </div>
-      <div class="header_right-part">
-        <div class="header_contacts">
-          <div class="header_contacts_text">Vi jobbar utan helgar og ferie!</div>
-          <div class="header_contacts_phone">+47 967 52 008</div>
+  <div class="header-with-burger">
+    <header>
+      <div class="header" id="header">
+        <div class="header_menu-block"><a href="#" class="header_logo"><img class="header_logo_img"
+              src="./i/img/logo-removebg.png" alt="logo"></a>
+          <a href="" class="header_menu" id="menu"><img class="header_menu_img" id="menu-burger-img"
+              src="./i/img/menu.png" alt="menu"></a>
+          <div class="header_text-logo">Arrangement for barna i Møre og Romsdal</div>
         </div>
-        <ul class="header_sosial-media">
-          <li class="header_sosial-media_inst"><a class="header_sosial-media_inst_link"
-              href="https://instagram.com/thefest.no?igshid=MzMyNGUyNmU2YQ==" target="_blank"><img
-                class="header_sosial-media_inst_img" src="./i/img/instagram.png" alt="inst"></a></li>
+        <div class="header_tabs">
+          <ul class="header_tabs_list">
+            <li class="header_tabs_list_item"><a class="tabs-link" id="tab-helter" href="#helter">Helter</a></li>
+            <li class="header_tabs_list_item"><a class="tabs-link" id="tab-tjenester" href="#tjenester">Tjenester</a>
+            </li>
+            <li class="header_tabs_list_item"><a class="tabs-link" id="tab-tjenestepakker"
+                href="#tjenestepakker">Tjenestepakker for
+                bursdag</a></li>
+            <li class="header_tabs_list_item"><a class="tabs-link" id="tab-ordre" href="#ordre">Ordre</a></li>
+            <li class="header_tabs_list_item"><a class="tabs-link" id="tab-galleri" href="#galleri">Galleri</a></li>
+          </ul>
+        </div>
+        <div class="header_right-part">
+          <div class="header_contacts">
+            <div class="header_contacts_text">Vi jobbar utan helgar og ferie!</div>
+            <div class="header_contacts_phone">+47 967 52 008</div>
+          </div>
+          <ul class="header_sosial-media">
+            <li class="header_sosial-media_inst"><a class="header_sosial-media_inst_link"
+                href="https://instagram.com/thefest.no?igshid=MzMyNGUyNmU2YQ==" target="_blank"><img
+                  class="header_sosial-media_inst_img" src="./i/img/instagram.png" alt="inst"></a></li>
 
-          <li class="header_sosial-media_fb"><a class="header_sosial-media_fb__link"
-              href="https://www.facebook.com/groups/3081311612171554" target="_blank"><img
-                class="header_sosial-media_fb_img" src="./i/img/fb.png" alt="fb"></a>
+            <li class="header_sosial-media_fb"><a class="header_sosial-media_fb__link"
+                href="https://www.facebook.com/groups/3081311612171554" target="_blank"><img
+                  class="header_sosial-media_fb_img" src="./i/img/fb.png" alt="fb"></a>
+            </li>
+
+          </ul>
+        </div>
+
+      </div>
+      <!-- --Бургерное меню в мобильной версии -->
+      <div class="burger">
+        <ul class="burger_list">
+          <li class="burger_list_item"><a class="burger_list_item_link" id="mobtab-helter" href="#helter">Helter</a>
           </li>
-
+          <li class="burger_list_item"><a class="burger_list_item_link" id="mobtab-tjenester"
+              href="#tjenester">Tjenester</a></li>
+          <li class="burger_list_item"><a class="burger_list_item_link" id="mobtab-tjenestepakker"
+              href="#tjenestepakker">Tjenestepakker for
+              bursdag</a></li>
+          <li class="burger_list_item"><a class="burger_list_item_link" id="mobtab-ordre" href="#ordre">Ordre</a></li>
+          <li class="burger_list_item"><a class="burger_list_item_link" id="mobtab-galleri" href="#galleri">Galleri</a>
+          </li>
+        </ul>
         </ul>
       </div>
+    </header>
 
-    </div>
-
-  </header>
+  </div>
+  <!-- --Затеняющий блок при открытии бургерного меню -->
+  <div class="burger-overlay"></div>
 
   <!-- --BANNER -->
   <div class="banner">
