--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
     <div class="banner_main">
       <h2 class="banner_title">Arrangement for barn</h2>
       <p class="banner_text">Gi det til barnet ditt uforglemmelige følelser</p>
-      <a class="banner_button" href="#">Ta kontakt med oss</a>
+      <a class="banner_button" id="bannerbutton" href="#ordre">Ta kontakt med oss</a>
 
     </div>
     <div class="banner_img-block"><img class="banner_img" src="./i/img/for-banner-removebg.png" alt="banner-img">
@@ -195,7 +195,7 @@
             <p class="tilleg_item-description_price">500 kr pr 1 time
             </p>
           </div>
-          <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+          <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Barnefest fotograf">
         </div>
       </li>
       <!-- -2 -->
@@ -211,7 +211,7 @@
               leik og underhaldning.</p>
             <p class="tilleg_item-description_price">400 kr
             </p>
-          </div><img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+          </div><img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Såpeboble">
         </div>
       </li>
       <!-- -3 -->
@@ -222,15 +222,14 @@
         <!-- -Всплывающий блок -->
         <div class="tilleg-help-block overlay">
           <div class="tilleg_item-description">
-            <p class="tilleg_item-description_text">Glittertatoveringar er midlertidige tatoveringar som påførast huda
-              med lim og glitter. Dei kjem i ulike
-              design og
-              mønster, og er ofte brukte til festleg huddekorasjon.</p>
+            <p class="tilleg_item-description_text">Glittertatoveringar er midlertidige tatoveringar som brukast med lim
+              og glitter. Dei finst i ulike design og
+              er populære til festleg huddekorasjon.</p>
             <p class="tilleg_item-description_price">Fest: 1000 kr pr 1 time
             </p>
             <p class="tilleg_item-description_price_second">Bursdag: 500 kr pr 1 time (20 barna)
             </p>
-          </div><img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+          </div><img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Glittertatoveringen">
         </div>
       </li>
       <!-- -4 -->
@@ -241,15 +240,13 @@
         <!-- -Всплывающий блок -->
         <div class="tilleg-help-block">
           <div class="tilleg_item-description">
-            <p class="tilleg_item-description_text">Akvamaling skaper midlertidige teikningar og dekorasjonar på huda,
-              spesielt ansiktet. Det er trygt, lett
-              å påføre, og
-              vaskast bort med vatn.</p>
+            <p class="tilleg_item-description_text">Akvamaling skaper midlertidige teikningar på huda, er trygt, lett å
+              påføre, og vaskast bort med vatn.</p>
             <p class="tilleg_item-description_price">Fest: 1000 kr pr 1 time / 50-100 kr pr ein person
             </p>
             <p class="tilleg_item-description_price_second">Bursdag: 500 kr pr 1 time (ca. 8 barn)
             </p>
-          </div><img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+          </div><img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Ansiktsmaling">
         </div>
       </li>
       <!-- -5 -->
@@ -257,7 +254,7 @@
         <div class="tilleg_item-bg tilleg_item-bg_5">
           <p>Klistremerker for barn</p>
         </div>
-        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Klistremerker for barn">
       </li>
       <!-- -6 -->
       <li class="tilleg_list_frame tsx">
@@ -273,7 +270,7 @@
               meningsfull gave til den som feirer sin spesielle dag frå gruppen barna.</p>
             <p class="tilleg_item-description_price">frå 250 kr
             </p>
-          </div><img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+          </div><img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Tegning med maling for minne">
         </div>
       </li>
       <!-- -7 -->
@@ -281,35 +278,35 @@
         <div class="tilleg_item-bg tilleg_item-bg_7">
           <p>Barnefrisør</p>
         </div>
-        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Barnefrisør">
       </li>
       <!-- -8 -->
       <li class="tilleg_list_frame te">
         <div class="tilleg_item-bg tilleg_item-bg_8">
           <p>Tilbehør</p>
         </div>
-        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Tilbehør">
       </li>
       <!-- -9 -->
       <li class="tilleg_list_frame tpin">
         <div class="tilleg_item-bg tilleg_item-bg_9">
           <p>Pinjata</p>
         </div>
-        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Pinjata">
       </li>
       <!-- -10 -->
       <li class="tilleg_list_frame tfot">
         <div class="tilleg_item-bg tilleg_item-bg_10">
           <p>Fotosone</p>
         </div>
-        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Fotosone">
       </li>
       <!-- -11 -->
       <li class="tilleg_list_frame tbal">
         <div class="tilleg_item-bg tilleg_item-bg_11">
           <p>Baloongar</p>
         </div>
-        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="Baloongar">
       </li>
 
 
@@ -448,17 +445,17 @@
     <div class="kontakt_block">
       <h2 class="kontakt_block_h1">Vil du ikke bruke mye tid på å finne ut av det?</h2>
       <p class="kontakt_block_txt">Vi vil utvikle det perfekte alternativer for festen din!</p>
-      <a href="tel:+4796752008" class="kontakt_block_number">
+      <div class="kontakt_block_number">
         <h2 class="second-h1">Vil du ikke bruke mye tid på å finne ut av det?</h2>
         <p class="second-txt">Vi vil utvikle det perfekte alternativer for festen din!</p>+47 967 52 008
         <p class="kontakt_block_number_gratis">Gratis konsultasjon!</p>
-      </a>
+      </div>
 
     </div>
     <div class="kontakt_btn">
-      <button class="kontakt_btn_btn1 ringer">
-        Ringer</button>
-      <button class="kontakt_btn_btn2 messenger ">Messenger</button>
+      <a href="tel:+380960352339"><button class="kontakt_btn_btn1 ringer">
+          Ringer</button></a>
+      <button class="kontakt_btn_btn2 messenger" id="messengerButton">Messenger</button>
     </div>
   </div>
 
