--- a/src/index.html
+++ b/src/index.html
@@ -512,8 +512,11 @@
         <p class="form_text">eller legg igjen en forespørsel</p>
 
 
-        <form action="page/new.html" target="_blank">
+        <form
+          action="https://docs.google.com/forms/d/e/1FAIpQLSfEZkfe4lzn3Ekkk38XAu4tMENCipTg0GIw7ItxPzh2vpgOXw/viewform"
+          target="_blank">
           <button class="form_btn">Send en forespørsel</button>
+          <p class="form_nyfane">(åpnes i en ny fane)</p>
       </div>
 
       <div><img class="form_img" src="i/img/form-phone.png" alt="tlf"></div>
