--- a/src/index.html
+++ b/src/index.html
@@ -131,45 +131,45 @@
     <div class="heroes_grid">
       <div class="heroes_grid_block heroes_grid_block_1">
         <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
-        <h3 class="heroes_grid_block_heroes">Roblox</h3>
-        <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
+        <h3 class="heroes_grid_block_heroes">Superhelter</h3>
+        <!-- <a class="heroes_grid_block_btn" href="#">Mer informasjon</a> -->
         </>
       </div>
 
       <div class="heroes_grid_block heroes_grid_block_2">
         <img class="heroes_grid_block_img heroes_grid_block_img_2" src="./i/img/patrol_transp.png" alt="ex">
-        <h3 class="heroes_grid_block_heroes">PAV patrul</h3>
-        <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
+        <h3 class="heroes_grid_block_heroes">Populære spillfigurer og moderne trender</h3>
+        <!-- <a class="heroes_grid_block_btn" href="#">Mer informasjon</a> -->
       </div>
 
       <div class="heroes_grid_block heroes_grid_block_3">
         <img class="heroes_grid_block_img heroes_grid_block_img_3" src="./i/img/pirat_transp.png" alt="ex">
-        <h3 class="heroes_grid_block_heroes">Pirater</h3>
-        <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
+        <h3 class="heroes_grid_block_heroes">Karakterer fra barnefilmer og eventyr</h3>
+        <!-- <a class="heroes_grid_block_btn" href="#">Mer informasjon</a> -->
       </div>
 
       <div class="heroes_grid_block heroes_grid_block_4">
         <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
-        <h3 class="heroes_grid_block_heroes">Enhjørnong</h3>
-        <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
+        <h3 class="heroes_grid_block_heroes">Helter for de minste</h3>
+        <!-- <a class="heroes_grid_block_btn" href="#">Mer informasjon</a> -->
       </div>
 
       <div class="heroes_grid_block heroes_grid_block_5">
         <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
-        <h3 class="heroes_grid_block_heroes">Marvel</h3>
-        <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
+        <h3 class="heroes_grid_block_heroes">Sjøeventyr</h3>
+        <!-- <a class="heroes_grid_block_btn" href="#">Mer informasjon</a> -->
       </div>
 
       <div class="heroes_grid_block heroes_grid_block_6">
         <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
-        <h3 class="heroes_grid_block_heroes">Addams familien</h3>
-        <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
+        <h3 class="heroes_grid_block_heroes">Store kostymer</h3>
+        <!-- <a class="heroes_grid_block_btn" href="#">Mer informasjon</a> -->
       </div>
-      <div class="heroes_grid_block heroes_grid_block_7">
+      <!-- <div class="heroes_grid_block heroes_grid_block_7">
         <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
         <h3 class="heroes_grid_block_heroes">Disney</h3>
         <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
-      </div>
+      </div> -->
     </div>
 
 
@@ -588,7 +588,8 @@
       <p class="footer_main-text">Organisering av barneselskap, bursdager og andre morsomme arrangementer. Eventbyrå med
         egne rekvisitter og
         positivt
-        rykte!</p>
+        rykte! <br /> <br />Vi er registrert som MVA-pliktige i Noreg, og alle våre tenester og produkt omfattar
+        meirverdiavgift.</p>
       <div class="footer_div1200">
         <p class="footer_sec-text">Bli med oss ​​på</p>
         <ul class="footer_sosial-media">
