--- a/src/index.html
+++ b/src/index.html
@@ -176,6 +176,42 @@
 
   </div>
 
+  <!-- --OVERLAY BLOCKS -->
+
+  <div class="overlayhelter">
+    <div class="overlayhelter_superhelter">
+      <button class="close-button">&times;</button>
+      <h2 class="overlayhelter_superhelter-title">Superhelter</h2>
+      <div>
+        <span class="superhelter-price">500 kr</span>
+        <span class="superhelter-price-text">pr 1 animatør</span>
+      </div>
+      <video class="superhelter-video" controls>
+        <source src="video.mp4" type="video/mp4">
+      </video>
+      <h3 class="superhelter-subtitle">Superhelter og karismatiske figurer</h3>
+      <p class="superhelter-subtitle-text">Disse figurene gir barna en mulighet til å fordype seg i en verden full av
+        heroiske eventyr! Vil du se Spider-Man som
+        redder dagen, eller Batman som bringer orden? Denne gruppen passer for dem som elsker superhelter og magiske
+        verdener.</p>
+      <h3 class="superhelter-subtitle-2">Figurer:</h3>
+      <div class="superhelter-grid">
+        <div class="superhelter-grid-item">
+          <img src="/src/i/img/spider-overlay.png" alt="Spiderman">
+          <p>Spider-Man</p>
+        </div>
+        <div class="superhelter-grid-item">
+          <img src="/src/i/img/batman_overlay.png" alt="Batman">
+          <p>Batman</p>
+        </div>
+      </div>
+      <p class="overlayhelter_superhelter-text">Kvar gruppe figurer skaper en unik atmosfære på festen, og gir barna
+        uforglemmelige minner og opplevelser!</p>
+    </div>
+  </div>
+
+
+
   <!-- --TILLEG -->
   <div class="tilleg" id="tjenester">
     <h2 class="tilleg_title">Lyse tilleg til ferien</h2>
