--- a/src/index.html
+++ b/src/index.html
@@ -180,38 +180,64 @@
 
   <div class="overlayhelter">
     <div class="overlayhelter-block">
+      <button class="close-button">&#10006;</button>
       <div class="overlayhelter-textblock">
-        <button class="close-button">&#10006;</button>
+
+
+
+
         <h2 class="overlayhelter-title">Superhelter</h2>
         <div class="overlayhelter-price">
           <span class="overlayhelter-price-number">500 kr</span>
           <span class="overlayhelter-price-text">pr 1 animatør</span>
         </div>
-        <video class="overlayhelter-video" controls>
-          <source src="video" type="video/mp4">
-        </video>
-        <h3 class="overlayhelter-textblock-subtitle">Superhelter og karismatiske figurer</h3>
-        <p class="overlayhelter-textblock-subtitle-text">Disse figurene gir barna en mulighet til å fordype seg i en
-          verden full av
-          heroiske eventyr! Vil du se Spider-Man som
-          redder dagen, eller Batman som bringer orden? Denne gruppen passer for dem som elsker superhelter og magiske
-          verdener.</p>
-        <h3 class="overlayhelter-textblock-subtitle-2">Figurer:</h3>
-        <div class="overlayhelter-textblock-grid">
-          <div class="overlayhelter-textblock-grid-item">
-            <img src="./i/img/spider-overlay.png" alt="Spiderman">
-            <p>Spider-Man</p>
+
+
+        <div class="maingrid-for-900">
+
+          <div class="grid-for-900 grid-for-900-block1">
+
+            <video class="overlayhelter-video" controls>
+              <source src="video" type="video/mp4">
+            </video>
+
+
+
+
+            <h3 class="overlayhelter-textblock-subtitle">Superhelter
+              og
+              karismatiske
+              figurer</h3>
+            <p class="overlayhelter-textblock-subtitle-text">Disse figurene gir barna en mulighet til å fordype seg i en
+              verden full av
+              heroiske eventyr! Vil du se Spider-Man som
+              redder dagen, eller Batman som bringer orden? Denne gruppen passer for dem som elsker superhelter og
+              magiske
+              verdener.</p>
           </div>
-          <div class="overlayhelter-textblock-grid-item">
-            <img src="./i/img/batman_overlay.png" alt="Batman">
-            <p>Batman</p>
+
+
+
+          <div class="grid-for-900 grid-for-900-block2">
+            <h3 class="overlayhelter-textblock-subtitle-2">Figurer:</h3>
+            <div class="overlayhelter-textblock-grid">
+              <div class="overlayhelter-textblock-grid-item">
+                <img src="./i/img/spider-overlay.png" alt="Spiderman">
+                <p>Spider-Man</p>
+              </div>
+              <div class="overlayhelter-textblock-grid-item">
+                <img src="./i/img/batman_overlay.png" alt="Batman">
+                <p>Batman</p>
+              </div>
+            </div>
+            <p class="overlayhelter-textblock-extratext">Kvar gruppe figurer skaper en unik atmosfære på festen, og gir
+              barna
+              uforglemmelige minner og opplevelser!</p>
           </div>
         </div>
-        <p class="overlayhelter-textblock-extratext">Kvar gruppe figurer skaper en unik atmosfære på festen, og gir
-          barna
-          uforglemmelige minner og opplevelser!</p>
       </div>
     </div>
+  </div>
 
   </div>
 
@@ -263,7 +289,8 @@
         <!-- -Всплывающий блок -->
         <div class="tilleg-help-block overlay">
           <div class="tilleg_item-description">
-            <p class="tilleg_item-description_text">Glittertatoveringar er midlertidige tatoveringar som brukast med lim
+            <p class="tilleg_item-description_text">Glittertatoveringar er midlertidige tatoveringar som brukast med
+              lim
               og glitter. Dei finst i ulike design og
               er populære til festleg huddekorasjon.</p>
             <p class="tilleg_item-description_price">Fest: 1000 kr pr 1 time
@@ -281,7 +308,8 @@
         <!-- -Всплывающий блок -->
         <div class="tilleg-help-block">
           <div class="tilleg_item-description">
-            <p class="tilleg_item-description_text">Akvamaling skaper midlertidige teikningar på huda, er trygt, lett å
+            <p class="tilleg_item-description_text">Akvamaling skaper midlertidige teikningar på huda, er trygt, lett
+              å
               påføre, og vaskast bort med vatn.</p>
             <p class="tilleg_item-description_price">Fest: 1000 kr pr 1 time / 50-100 kr pr ein person
             </p>
@@ -305,7 +333,8 @@
         <!-- -Всплывающий блок -->
         <div class="tilleg-help-block">
           <div class="tilleg_item-description">
-            <p class="tilleg_item-description_text">Denne typen tegninger har som mål å fange stemningen og gleden rundt
+            <p class="tilleg_item-description_text">Denne typen tegninger har som mål å fange stemningen og gleden
+              rundt
               bursdagsfeiringen og kan vere ein
               personlig og
               meningsfull gave til den som feirer sin spesielle dag frå gruppen barna.</p>
@@ -510,7 +539,8 @@
         <li class="where_list_item"><img class="where_list_item_img" src="i/img/002-apartments.png" alt="leilegheit">I
           ei
           leilegheit</li>
-        <li class="where_list_item"><img class="where_list_item_img" src="i/img/003-park.png" alt="park">I ein park</li>
+        <li class="where_list_item"><img class="where_list_item_img" src="i/img/003-park.png" alt="park">I ein park
+        </li>
         <li class="where_list_item"><img class="where_list_item_img" src="i/img/004-game.png" alt="barnehage">I ein
           barnehage/skule</li>
         <li class="where_list_item"><img class="where_list_item_img" src="i/img/005-playground.png"
