--- a/src/index.html
+++ b/src/index.html
@@ -128,7 +128,7 @@
       <p class="heroes_title_text1">Barna er glade, foreldra slapper av</p>
     </div>
 
-    <div class="heroes_grid">
+    <div class="heroes_grid" id="helter-grid">
       <div class="heroes_grid_block heroes_grid_block_1">
         <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
         <h3 class="heroes_grid_block_heroes">Superhelter</h3>
@@ -171,73 +171,75 @@
         <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
       </div> -->
     </div>
+    <!-- --OVERLAY BLOCKS -->
 
-
-
-  </div>
-
-  <!-- --OVERLAY BLOCKS -->
-
-  <div class="overlayhelter">
-    <div class="overlayhelter-block">
-      <button class="close-button">&#10006;</button>
-      <div class="overlayhelter-textblock">
+    <div class="overlayhelter">
+      <div class="overlayhelter-block">
+        <button class="close-button">&#10006;</button>
+        <div class="overlayhelter-textblock">
 
 
 
 
-        <h2 class="overlayhelter-title">Superhelter</h2>
-        <div class="overlayhelter-price">
-          <span class="overlayhelter-price-number">500 kr</span>
-          <span class="overlayhelter-price-text">pr 1 animatør</span>
-        </div>
-
-
-        <div class="maingrid-for-900">
-
-          <div class="grid-for-900 grid-for-900-block1">
-
-            <video class="overlayhelter-video" controls>
-              <source src="video" type="video/mp4">
-            </video>
-
-
-
-
-            <h3 class="overlayhelter-textblock-subtitle">Superhelter
-              og
-              karismatiske
-              figurer</h3>
-            <p class="overlayhelter-textblock-subtitle-text">Disse figurene gir barna en mulighet til å fordype seg i en
-              verden full av
-              heroiske eventyr! Vil du se Spider-Man som
-              redder dagen, eller Batman som bringer orden? Denne gruppen passer for dem som elsker superhelter og
-              magiske
-              verdener.</p>
+          <h2 class="overlayhelter-title">Superhelter</h2>
+          <div class="overlayhelter-price">
+            <span class="overlayhelter-price-number">500 kr</span>
+            <span class="overlayhelter-price-text">pr 1 animatør</span>
           </div>
 
 
+          <div class="maingrid-for-900">
 
-          <div class="grid-for-900 grid-for-900-block2">
-            <h3 class="overlayhelter-textblock-subtitle-2">Figurer:</h3>
-            <div class="overlayhelter-textblock-grid">
-              <div class="overlayhelter-textblock-grid-item">
-                <img src="./i/img/spider-overlay.png" alt="Spiderman">
-                <p>Spider-Man</p>
-              </div>
-              <div class="overlayhelter-textblock-grid-item">
-                <img src="./i/img/batman_overlay.png" alt="Batman">
-                <p>Batman</p>
-              </div>
+            <div class="grid-for-900 grid-for-900-block1">
+
+              <video class="overlayhelter-video" controls>
+                <source src="video" type="video/mp4">
+              </video>
+
+
+
+
+              <h3 class="overlayhelter-textblock-subtitle">Superhelter
+                og
+                karismatiske
+                figurer</h3>
+              <p class="overlayhelter-textblock-subtitle-text">Disse figurene gir barna en mulighet til å fordype seg i
+                en
+                verden full av
+                heroiske eventyr! Vil du se Spider-Man som
+                redder dagen, eller Batman som bringer orden? Denne gruppen passer for dem som elsker superhelter og
+                magiske
+                verdener.</p>
             </div>
-            <p class="overlayhelter-textblock-extratext">Kvar gruppe figurer skaper en unik atmosfære på festen, og gir
-              barna
-              uforglemmelige minner og opplevelser!</p>
+
+
+
+            <div class="grid-for-900 grid-for-900-block2">
+              <h3 class="overlayhelter-textblock-subtitle-2">Figurer:</h3>
+              <div class="overlayhelter-textblock-grid">
+                <div class="overlayhelter-textblock-grid-item">
+                  <img src="./i/img/spider-overlay.png" alt="Spiderman">
+                  <p>Spider-Man</p>
+                </div>
+                <div class="overlayhelter-textblock-grid-item">
+                  <img src="./i/img/batman_overlay.png" alt="Batman">
+                  <p>Batman</p>
+                </div>
+              </div>
+              <p class="overlayhelter-textblock-extratext">Kvar gruppe figurer skaper en unik atmosfære på festen, og
+                gir
+                barna
+                uforglemmelige minner og opplevelser!</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
+
+
   </div>
+
+
 
   </div>
 
