--- a/src/index.html
+++ b/src/index.html
@@ -94,9 +94,11 @@
   <div class="title-div">
     <div class="title-div_motor"><a id="videoLink" href="#video"><img class="title-div_motor_img"
           src="./i/img/motor.png" alt="motor"></a>
-      <a class="title-div_motor_button" id="videoButton" href="#video">Vise video</a>
+
     </div>
+
     <div class="div-for1200">
+      <div><a class="title-div_motor_button" id="videoButton" href="#video">Vise video</a></div>
       <h1 class="title-div_text">Vi lager barnafestar som barn vil huske for alltid</h1>
       <div class="title-div_list">
         <ul class="title-div_list_ul">
