--- a/src/index.html
+++ b/src/index.html
@@ -132,7 +132,7 @@
 
     <div class="heroes_grid" id="helter-grid">
       <div class="heroes_grid_block heroes_grid_block_1">
-        <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
+        <img class="heroes_grid_block_img" src="./i/img/superhelter_transp.png" alt="ex">
         <h3 class="heroes_grid_block_heroes">Superhelter</h3>
         <!-- <a class="heroes_grid_block_btn" href="#">Mer informasjon</a> -->
         </>
@@ -165,6 +165,12 @@
       <div class="heroes_grid_block heroes_grid_block_6">
         <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
         <h3 class="heroes_grid_block_heroes">Store kostymer</h3>
+        <!-- <a class="heroes_grid_block_btn" href="#">Mer informasjon</a> -->
+      </div>
+
+      <div class="heroes_grid_block heroes_grid_block_7">
+        <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
+        <h3 class="heroes_grid_block_heroes">Kaptein</h3>
         <!-- <a class="heroes_grid_block_btn" href="#">Mer informasjon</a> -->
       </div>
       <!-- <div class="heroes_grid_block heroes_grid_block_7">
